--- a/public/themes/backend/adminlte/assets/css/style.css
+++ b/public/themes/backend/adminlte/assets/css/style.css
@@ -3,7 +3,6 @@
  | Copyright 2018
  | Author TQ HOA <tqhoa8th@gmail.com>
  */
-
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -42,9 +41,6 @@ textarea:focus {
 }
 
 /** File Layout */
-
 /** File Home */
 
-
-/** File Menu */
-
+/** File post.css */
