--- a/Themes/backend/themekit/assets/sass/project/_forms.scss
+++ b/Themes/backend/themekit/assets/sass/project/_forms.scss
@@ -82,7 +82,7 @@ select.form-control {
     -moz-appearance: none;
     appearance: none;
     padding-right: 20px;
-    background-image: url('../img/down-arrow.svg');
+    background-image: url('../images/down-arrow.svg');
     background-position: center right 15px;
     background-repeat: no-repeat;
     -webkit-background-size: 10px;
