--- a/Themes/backend/themekit/assets/sass/style.scss
+++ b/Themes/backend/themekit/assets/sass/style.scss
@@ -7,13 +7,12 @@
 
 // Foundation
 // ---------------------------------------
-//@import "foundation/variable";
-//@import "foundation/base";
+@import "foundation/variable";
+@import 'foundation/mixins/mixins';
+@import "foundation/base";
 
 // Project
 // ---------------------------------------
-
-@import 'project/mixins/mixins';
 @import 'project/settings';
 @import 'project/cards';
 @import 'project/widgets';
