create register services

--- a/Themes/backend/themekit/assets/sass/project/_forms.scss
+++ b/Themes/backend/themekit/assets/sass/project/_forms.scss
@@ -1012,3 +1012,17 @@ $background-checkbox-bg-color: $primary, $warning, $default, $danger, $success, 
         background-color: nth($background-checkbox-bg-color, $i);
     }
 }
+
+.custom-checkbox {
+    .custom-control-label {
+        &:before,
+        &:after {
+            top: .15rem;
+        }
+    }
+}
+
+.help-block {
+	font-size: 90%;
+	color: $warning;
+}
