create confirm email

--- a/Themes/backend/themekit/assets/sass/foundation/_variable.scss
+++ b/Themes/backend/themekit/assets/sass/foundation/_variable.scss
@@ -33,3 +33,5 @@ $google: #dc4a38;
 $instagram: #fb3958;
 $behance: #053eff;
 $element-color: 'primary' $primary, 'warning' $warning, 'danger' $danger, 'success' $success, 'inverse' $inverse, 'info' $info;
+
+$font-size: 14px;
