--- a/Themes/backend/themekit/assets/sass/project/_auth.scss
+++ b/Themes/backend/themekit/assets/sass/project/_auth.scss
@@ -16,7 +16,7 @@
 		}
 	}
 	.authentication-form {
-	    font-size: .9rem;
+	    font-size: 100%;
 	    width: 70%;
 	    display: block;
 	    padding: 100px 0;
