--- a/Themes/backend/themekit/assets/sass/project/_forms.scss
+++ b/Themes/backend/themekit/assets/sass/project/_forms.scss
@@ -1017,12 +1017,11 @@ $background-checkbox-bg-color: $primary, $warning, $default, $danger, $success, 
     .custom-control-label {
         &:before,
         &:after {
-            top: .15rem;
+            top: 1px;
         }
     }
 }
 
 .help-block {
-	font-size: 90%;
 	color: $warning;
 }
