--- a/Themes/backend/themekit/assets/sass/project/_main.scss
+++ b/Themes/backend/themekit/assets/sass/project/_main.scss
@@ -1,13 +1,13 @@
 $ff: 'Nunito Sans', sans-serif;
 body {
     color: #212121;
-    font-size: .8rem;
+    font-size: $font-size;
     line-height: 1.5;
     font-weight: 400;
     font-family: $ff;
 }
 p {
-	font-size: 14px;
+	font-size: 100%;
 }
 .dropdown-toggle {
     @include pseudo-element('after') {
