modified func title web

--- a/Themes/backend/themekit/assets/sass/project/_main.scss
+++ b/Themes/backend/themekit/assets/sass/project/_main.scss
@@ -233,6 +233,8 @@ p {
 			    }
 			    i {
 				    font-size: 16px;
+					position: relative;
+					top: -2px;
 				}
 				.badge {
 				    right: -1px;
