--- a/Themes/backend/themekit/assets/sass/project/_cards.scss
+++ b/Themes/backend/themekit/assets/sass/project/_cards.scss
@@ -8,7 +8,7 @@
     @include transition(all 0.5s ease-in-out);
     @include border-radius(4px);
     .card-header {
-	    padding: 20px 20px;
+	    padding: 15px 15px;
 	    border: 0;
 	    background: none;
 	    @include flexbox();
@@ -18,8 +18,8 @@
 		}
 		h3 {
 			margin: 0;
-		    font-size: 18px;
-		    font-weight: normal;
+		    font-size: 16px;
+		    font-weight: 700;
 		    color: #212121;
 		}
 		.card-options {
