create blade fiels textarea

--- a/Themes/backend/themekit/assets/sass/project/_cards.scss
+++ b/Themes/backend/themekit/assets/sass/project/_cards.scss
@@ -118,6 +118,12 @@
 	    flex: 1 1 auto;
 	    position: relative;
 	}
+
+	.cart-none-left-right {
+		padding-left: 0;
+		padding-right: 0;
+	}
+
 	.card-footer {
 		background-color: transparent;
 		padding: 20px 20px;
