create select locales

--- a/Themes/backend/themekit/assets/sass/style.scss
+++ b/Themes/backend/themekit/assets/sass/style.scss
@@ -6,6 +6,7 @@
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~icon-kit/dist/css/iconkit.css";
 @import "~perfect-scrollbar/css/perfect-scrollbar.css";
+@import "~selectize/dist/css/selectize.default.css";
 
 /*!
  | Theme name: ThemeKit
