--- a/Themes/backend/lavatheme/assets/sass/style.scss
+++ b/Themes/backend/lavatheme/assets/sass/style.scss
@@ -4,6 +4,7 @@
 // ---------------------------------------
 @import "~bootstrap/scss/bootstrap";
 @import "~icon-kit/dist/css/iconkit.css";
+@import "~perfect-scrollbar/css/perfect-scrollbar.css";
 /*!
  | Theme name: ThemeKit
  | Copyright 2018 TQ HOA <tqhoa8th@gmail.com>
