Done setup assets

--- a/Themes/backend/lavatheme/resources/src/sass/foundation/_variable.scss
+++ b/Themes/backend/lavatheme/resources/src/sass/foundation/_variable.scss
@@ -35,3 +35,4 @@ $behance: #053eff;
 $element-color: 'primary' $primary, 'warning' $warning, 'danger' $danger, 'success' $success, 'inverse' $inverse, 'info' $info;
 
 $font-size: 14px;
+$ff: 'Nunito Sans', sans-serif;
