--- a/Themes/backend/lavatheme/resources/src/sass/style.scss
+++ b/Themes/backend/lavatheme/resources/src/sass/style.scss
@@ -1,20 +1,21 @@
 @charset "utf-8";
 
+/*!
+ | Theme name: LavaTheme
+ | Copyright 2019 TQ HOA <tqhoa8th@gmail.com>
+ */
+
 // Foundation
 // ---------------------------------------
 @import "~bootstrap/scss/bootstrap";
 @import "~icon-kit/dist/css/iconkit.css";
 @import "~perfect-scrollbar/css/perfect-scrollbar.css";
-/*!
- | Theme name: ThemeKit
- | Copyright 2018 TQ HOA <tqhoa8th@gmail.com>
- */
 //-------------------------------------
 
 @import "foundation/variable";
 @import 'foundation/mixins/mixins';
 @import "foundation/base";
-
+//
 @import 'project/settings';
 @import 'project/cards';
 @import 'project/widgets';
@@ -32,6 +33,3 @@
 @import 'project/layout';
 @import 'project/auth';
 @import 'project/main';
-
-
-
