--- a/Themes/backend/lavatheme/resources/src/sass/project/_forms.scss
+++ b/Themes/backend/lavatheme/resources/src/sass/project/_forms.scss
@@ -90,7 +90,7 @@ select.form-control {
     height: 35px !important;
 }
 textarea.form-control {
-    padding: 10px 15px;
+    padding: 10px;
     @include border-radius(4px);
 }
 .custom-radio {
