--- a/Themes/backend/lavatheme/resources/src/sass/project/_main.scss
+++ b/Themes/backend/lavatheme/resources/src/sass/project/_main.scss
@@ -792,9 +792,9 @@ p {
 		    }
 		}
 		.footer {
-		    background: $white;
-		    padding: 20px 30px;
-		    border-top: 1px solid rgba(0, 0, 0, 0.04);
+		    background: #F6F7FB;
+		    padding: 2px 30px;
+		    //border-top: 1px solid rgba(0, 0, 0, 0.04);
 		    font-size: calc(0.875rem - 0.05rem);
 		    @include transition(all 0.25s ease);
 		    @include mq('tablet-wide') {
